added model metrics, and fundamental metrics to dash; started to clean up for final build

--- a/Dashboard Model Stats Testing.ipynb
+++ b/Dashboard Model Stats Testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,11 +37,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "r2_df = pd.read_csv('assets/models/tyler_rf_daily_update/r2_df.csv',index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Target 7</th>\n",
+       "      <th>Feats 60</th>\n",
+       "      <th>Target 120</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>r2</th>\n",
+       "      <td>0.9831</td>\n",
+       "      <td>0.9115</td>\n",
+       "      <td>0.9448</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Target 7  Feats 60  Target 120\n",
+       "r2    0.9831    0.9115      0.9448"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r2_df"
    ]
   },
   {
@@ -145,10 +201,205 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>loss</th>\n",
+       "      <th>binary_accuracy</th>\n",
+       "      <th>precision</th>\n",
+       "      <th>recall</th>\n",
+       "      <th>val_loss</th>\n",
+       "      <th>val_binary_accuracy</th>\n",
+       "      <th>val_precision</th>\n",
+       "      <th>val_recall</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.782244</td>\n",
+       "      <td>0.521322</td>\n",
+       "      <td>0.528646</td>\n",
+       "      <td>0.430998</td>\n",
+       "      <td>0.721785</td>\n",
+       "      <td>0.493617</td>\n",
+       "      <td>0.480519</td>\n",
+       "      <td>0.654867</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.777499</td>\n",
+       "      <td>0.497868</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.341826</td>\n",
+       "      <td>0.715240</td>\n",
+       "      <td>0.519149</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.530973</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.751071</td>\n",
+       "      <td>0.496802</td>\n",
+       "      <td>0.498221</td>\n",
+       "      <td>0.297240</td>\n",
+       "      <td>0.709998</td>\n",
+       "      <td>0.510638</td>\n",
+       "      <td>0.488095</td>\n",
+       "      <td>0.362832</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.720353</td>\n",
+       "      <td>0.508529</td>\n",
+       "      <td>0.519685</td>\n",
+       "      <td>0.280255</td>\n",
+       "      <td>0.708551</td>\n",
+       "      <td>0.510638</td>\n",
+       "      <td>0.484375</td>\n",
+       "      <td>0.274336</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.718844</td>\n",
+       "      <td>0.502132</td>\n",
+       "      <td>0.508065</td>\n",
+       "      <td>0.267516</td>\n",
+       "      <td>0.706861</td>\n",
+       "      <td>0.497872</td>\n",
+       "      <td>0.454545</td>\n",
+       "      <td>0.221239</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
+       "      <td>0.610978</td>\n",
+       "      <td>0.659915</td>\n",
+       "      <td>0.792308</td>\n",
+       "      <td>0.437367</td>\n",
+       "      <td>0.690786</td>\n",
+       "      <td>0.646809</td>\n",
+       "      <td>0.647059</td>\n",
+       "      <td>0.584071</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>146</th>\n",
+       "      <td>0.610825</td>\n",
+       "      <td>0.686567</td>\n",
+       "      <td>0.800000</td>\n",
+       "      <td>0.501062</td>\n",
+       "      <td>0.694649</td>\n",
+       "      <td>0.621277</td>\n",
+       "      <td>0.615385</td>\n",
+       "      <td>0.566372</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147</th>\n",
+       "      <td>0.610516</td>\n",
+       "      <td>0.654584</td>\n",
+       "      <td>0.759717</td>\n",
+       "      <td>0.456476</td>\n",
+       "      <td>0.679385</td>\n",
+       "      <td>0.646809</td>\n",
+       "      <td>0.647059</td>\n",
+       "      <td>0.584071</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>148</th>\n",
+       "      <td>0.623506</td>\n",
+       "      <td>0.657782</td>\n",
+       "      <td>0.760417</td>\n",
+       "      <td>0.464968</td>\n",
+       "      <td>0.682021</td>\n",
+       "      <td>0.642553</td>\n",
+       "      <td>0.643564</td>\n",
+       "      <td>0.575221</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>149</th>\n",
+       "      <td>0.634314</td>\n",
+       "      <td>0.640725</td>\n",
+       "      <td>0.761719</td>\n",
+       "      <td>0.414013</td>\n",
+       "      <td>0.682604</td>\n",
+       "      <td>0.642553</td>\n",
+       "      <td>0.640777</td>\n",
+       "      <td>0.584071</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>150 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         loss  binary_accuracy  precision    recall  val_loss  \\\n",
+       "0    0.782244         0.521322   0.528646  0.430998  0.721785   \n",
+       "1    0.777499         0.497868   0.500000  0.341826  0.715240   \n",
+       "2    0.751071         0.496802   0.498221  0.297240  0.709998   \n",
+       "3    0.720353         0.508529   0.519685  0.280255  0.708551   \n",
+       "4    0.718844         0.502132   0.508065  0.267516  0.706861   \n",
+       "..        ...              ...        ...       ...       ...   \n",
+       "145  0.610978         0.659915   0.792308  0.437367  0.690786   \n",
+       "146  0.610825         0.686567   0.800000  0.501062  0.694649   \n",
+       "147  0.610516         0.654584   0.759717  0.456476  0.679385   \n",
+       "148  0.623506         0.657782   0.760417  0.464968  0.682021   \n",
+       "149  0.634314         0.640725   0.761719  0.414013  0.682604   \n",
+       "\n",
+       "     val_binary_accuracy  val_precision  val_recall  \n",
+       "0               0.493617       0.480519    0.654867  \n",
+       "1               0.519149       0.500000    0.530973  \n",
+       "2               0.510638       0.488095    0.362832  \n",
+       "3               0.510638       0.484375    0.274336  \n",
+       "4               0.497872       0.454545    0.221239  \n",
+       "..                   ...            ...         ...  \n",
+       "145             0.646809       0.647059    0.584071  \n",
+       "146             0.621277       0.615385    0.566372  \n",
+       "147             0.646809       0.647059    0.584071  \n",
+       "148             0.642553       0.643564    0.575221  \n",
+       "149             0.642553       0.640777    0.584071  \n",
+       "\n",
+       "[150 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_csv('assets/models/jeff_multi_factor/mf_mlp.csv')"
+   ]
   },
   {
    "cell_type": "code",
