--- a/Creating Technical Features Data.ipynb
+++ b/Creating Technical Features Data.ipynb
@@ -76,14 +76,15 @@
     "#         feature_df = pd.concat([feature_df,temp_df])\n",
     "#         count += 1\n",
     "#     print(f'Finished {ticker}. Done with {count} of 504 tickers')\n",
-    "    \n",
+    "\n",
+    "\n",
     "# # save feature df to csv for future usage. Feature creation takes hours on entire dataset\n",
     "# feature_df.to_csv('assets/models/tyler_rf_daily_update/ta_feature_df.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "190d8979",
    "metadata": {},
    "outputs": [
@@ -317,7 +318,7 @@
        "[5 rows x 103 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "a49816cd",
    "metadata": {},
    "outputs": [],
@@ -356,7 +357,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create temp_df to test loading\n",
+    "# create temp_df to load certain timeframe\n",
     "temp_df = feature_df[(feature_df.index >= '2017-01-01') & (feature_df.index <= '2021-07-01')]\n",
     "\n",
     "temp_df.to_sql('technical_features_daily', engine)"
@@ -364,11 +365,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "8506fc57",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# For adding addtional data to postgres\n",
+    "\n",
+    "# create temp_df to test loading\n",
+    "temp_df = feature_df[(feature_df.index >= '2016-01-01') & (feature_df.index <= '2016-12-31')]\n",
+    "\n",
+    "temp_df.to_sql('technical_features_daily',engine,if_exists='append')"
+   ]
   }
  ],
  "metadata": {
