making notebook prettier

--- a/short_cnn_notebook.ipynb
+++ b/short_cnn_notebook.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b17c4068",
+   "metadata": {},
+   "source": [
+    "<h2>CNN Image Pattern Recognition</h2>\n",
+    "<h3>Background</h3>\n",
+    "This model relies on technical features which would be utilized by day traders - candlestick charts with moving averages and Bollinger bands. There were 10 stocks, and 2 ETFs that were selected to trade due to their high intraday volume, however the choices were limited due to Alpha Vantage . These stocks and ETFs were NVDA, AMD, JPM, JNJ, MRNA, F, TSLA, MSFT, BAC, BABA, SPY, and QQQ. The historical intraday stock values of open, high, low, close were all used to train the model by creating candlesticks every 5 or 15 minute intervals. These larger intervals were chosen, compared to 1 minute or 2 minute intervals, because at the small intervals there were a lot of timestamps which had no volume, meaning no trades and no volatility. The CNN is used as an image pattern recognition model to recognize when the stock will go up or go down given the candlestick charts.\n",
+    "\n",
+    "<img alt=\"https://learnopencv.com/image-classification-using-convolutional-neural-networks-in-keras/\" height=\"500\" src=\"assets/cnn.jpg\" title=\"Title\" width=\"500\"/>\n",
+    "Above is a CNN model schema example seen <a href=\"https://learnopencv.com/image-classification-using-convolutional-neural-networks-in-keras/\">here</a>. The first part consists of Convolutional and max-pooling layers, while the second part consists of the fully connected layer, which performs non-linear transformations of the extracted features and, in this case, acts as the classifier. Two types of outputs here can be either a softmax or a sigmoid layer, which will tell whether the image is of a cat or not, or probabilty of the image being a cat.\n",
+    "<h3>Why a CNN model?</h3>\n",
+    "CNNs are fully connected feed forward neural networks, and are very effective in reducing number of parameters without losing the quality of the model. Since images have a lot of features, with each pixel considered its own feature, they have very high dimensionality. Thus, since CNNs are good at dimension reduction without loss of quality in the model, CNNs are good with images."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "8b7b0494",
@@ -180,15 +195,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cbe1a548",
+   "metadata": {},
+   "source": [
+    "Two classes are used here, buy and don't buy. In this situation, the image below is a 'buy' signal.\n",
+    "After creating these images comes training the CNN, which is seen below in the `train_cnn_model` function. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "32343652",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# initially this was done with 27 classes (x_x_x denoting changes within every 5 minutes for 15 minutes) \n",
-    "# but it was very innacurate so 2 classes were used - buy or not buy\n",
-    "# to classify the models\n",
     "plt.imread('assets/cnn_images_5m/buy/')"
    ]
   },
@@ -316,14 +337,6 @@
     "    needs_split = False\n",
     "train_cnn_model(width=203, height=202, num_samples=64947, needs_split=needs_split)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e7b31b87",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
