more github clean up; updated dashboard code

--- a/assets/models/tyler_facebook_prophet_model/Tyler Facebook Prophet Model.ipynb
+++ b/assets/models/tyler_facebook_prophet_model/Tyler Facebook Prophet Model.ipynb
@@ -48,263 +48,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "e81fbe51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Facebook prophet library needs to be installed manually due to issues with package/OS dependencies\n",
+    "# !pip install prophet"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "04ca9b0e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # # Creating stock_df from feature file\n",
-    "# stock_df = daily_features()\n",
-    "# recommendations_df = pd.read_csv('assets/ticker_recommendations.csv')\n",
-    "# stock_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "c9b114e4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Adj Close</th>\n",
-       "      <th>Close</th>\n",
-       "      <th>Close_adj</th>\n",
-       "      <th>Dividends</th>\n",
-       "      <th>High</th>\n",
-       "      <th>High_adj</th>\n",
-       "      <th>Low</th>\n",
-       "      <th>Low_adj</th>\n",
-       "      <th>Open</th>\n",
-       "      <th>Open_adj</th>\n",
-       "      <th>...</th>\n",
-       "      <th>momentum_wr</th>\n",
-       "      <th>momentum_ao</th>\n",
-       "      <th>momentum_kama</th>\n",
-       "      <th>momentum_roc</th>\n",
-       "      <th>momentum_ppo</th>\n",
-       "      <th>momentum_ppo_signal</th>\n",
-       "      <th>momentum_ppo_hist</th>\n",
-       "      <th>others_dr</th>\n",
-       "      <th>others_dlr</th>\n",
-       "      <th>others_cr</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1990-02-16</th>\n",
-       "      <td>0.056967</td>\n",
-       "      <td>0.056967</td>\n",
-       "      <td>0.077257</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.058887</td>\n",
-       "      <td>0.079861</td>\n",
-       "      <td>0.054407</td>\n",
-       "      <td>0.073785</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-42.857143</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.056967</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>-99.670356</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1990-02-20</th>\n",
-       "      <td>0.058887</td>\n",
-       "      <td>0.058887</td>\n",
-       "      <td>0.079861</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.058887</td>\n",
-       "      <td>0.079861</td>\n",
-       "      <td>0.055047</td>\n",
-       "      <td>0.074653</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.000804</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.057802</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-7.132343</td>\n",
-       "      <td>-1.426469</td>\n",
-       "      <td>-5.705874</td>\n",
-       "      <td>3.370505</td>\n",
-       "      <td>3.314949</td>\n",
-       "      <td>3.370505</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1990-02-21</th>\n",
-       "      <td>0.057607</td>\n",
-       "      <td>0.057607</td>\n",
-       "      <td>0.078125</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.058247</td>\n",
-       "      <td>0.078993</td>\n",
-       "      <td>0.055687</td>\n",
-       "      <td>0.075521</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-28.571863</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.057718</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-14.352665</td>\n",
-       "      <td>-4.011708</td>\n",
-       "      <td>-10.340957</td>\n",
-       "      <td>-2.173750</td>\n",
-       "      <td>-2.197724</td>\n",
-       "      <td>1.123489</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1990-02-22</th>\n",
-       "      <td>0.058247</td>\n",
-       "      <td>0.058247</td>\n",
-       "      <td>0.078993</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.060167</td>\n",
-       "      <td>0.081597</td>\n",
-       "      <td>0.058247</td>\n",
-       "      <td>0.078993</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-33.333463</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.057944</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-21.164525</td>\n",
-       "      <td>-7.442271</td>\n",
-       "      <td>-13.722254</td>\n",
-       "      <td>1.111033</td>\n",
-       "      <td>1.104906</td>\n",
-       "      <td>2.247004</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1990-02-23</th>\n",
-       "      <td>0.057927</td>\n",
-       "      <td>0.057927</td>\n",
-       "      <td>0.078559</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.058887</td>\n",
-       "      <td>0.079861</td>\n",
-       "      <td>0.057607</td>\n",
-       "      <td>0.078125</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-38.889100</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.057937</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-27.325018</td>\n",
-       "      <td>-11.418821</td>\n",
-       "      <td>-15.906197</td>\n",
-       "      <td>-0.549422</td>\n",
-       "      <td>-0.550937</td>\n",
-       "      <td>1.685236</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 103 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            Adj Close     Close  Close_adj  Dividends      High  High_adj  \\\n",
-       "Date                                                                        \n",
-       "1990-02-16   0.056967  0.056967   0.077257        0.0  0.058887  0.079861   \n",
-       "1990-02-20   0.058887  0.058887   0.079861        0.0  0.058887  0.079861   \n",
-       "1990-02-21   0.057607  0.057607   0.078125        0.0  0.058247  0.078993   \n",
-       "1990-02-22   0.058247  0.058247   0.078993        0.0  0.060167  0.081597   \n",
-       "1990-02-23   0.057927  0.057927   0.078559        0.0  0.058887  0.079861   \n",
-       "\n",
-       "                 Low   Low_adj  Open  Open_adj  ...  momentum_wr  momentum_ao  \\\n",
-       "Date                                            ...                             \n",
-       "1990-02-16  0.054407  0.073785   0.0       0.0  ...   -42.857143          0.0   \n",
-       "1990-02-20  0.055047  0.074653   0.0       0.0  ...    -0.000804          0.0   \n",
-       "1990-02-21  0.055687  0.075521   0.0       0.0  ...   -28.571863          0.0   \n",
-       "1990-02-22  0.058247  0.078993   0.0       0.0  ...   -33.333463          0.0   \n",
-       "1990-02-23  0.057607  0.078125   0.0       0.0  ...   -38.889100          0.0   \n",
-       "\n",
-       "           momentum_kama momentum_roc  momentum_ppo  momentum_ppo_signal  \\\n",
-       "Date                                                                       \n",
-       "1990-02-16      0.056967          0.0      0.000000             0.000000   \n",
-       "1990-02-20      0.057802          0.0     -7.132343            -1.426469   \n",
-       "1990-02-21      0.057718          0.0    -14.352665            -4.011708   \n",
-       "1990-02-22      0.057944          0.0    -21.164525            -7.442271   \n",
-       "1990-02-23      0.057937          0.0    -27.325018           -11.418821   \n",
-       "\n",
-       "            momentum_ppo_hist  others_dr  others_dlr  others_cr  \n",
-       "Date                                                             \n",
-       "1990-02-16           0.000000 -99.670356    0.000000   0.000000  \n",
-       "1990-02-20          -5.705874   3.370505    3.314949   3.370505  \n",
-       "1990-02-21         -10.340957  -2.173750   -2.197724   1.123489  \n",
-       "1990-02-22         -13.722254   1.111033    1.104906   2.247004  \n",
-       "1990-02-23         -15.906197  -0.549422   -0.550937   1.685236  \n",
-       "\n",
-       "[5 rows x 103 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Or just load if no need to re-create features\n",
-    "feature_df = pd.read_csv('assets/models/tyler_rf_daily_update/ta_feature_df.csv',index_col=0)\n",
+    "def import_technical_features():\n",
+    "    conn = connect(dbname = '697_temp', user = 'postgres', host = 'databasesec.cvhiyxfodl3e.us-east-2.rds.amazonaws.com', password = 'poRter!5067')\n",
+    "    cur = conn.cursor()\n",
+    "    query = \"SELECT * FROM technical_features_daily\"\n",
+    "    data = pd.read_sql_query(query,conn)\n",
+    "    data = data.sort_values(['ticker', 'Date'])\n",
+    "    data['Date'] = pd.to_datetime(data['Date'])\n",
+    "    data = data.set_index('Date')\n",
+    "    return data\n",
+    "feature_df = import_technical_features()\n",
     "\n",
-    "feature_df.index = pd.to_datetime(feature_df.index)\n",
+    "# Or just load if no need to re-create features\n",
+    "# feature_df = pd.read_csv('assets/models/tyler_rf_daily_update/ta_feature_df.csv',index_col=0)\n",
+    "# Ensure index is datetime\n",
+    "# feature_df.index = pd.to_datetime(feature_df.index)\n",
     "\n",
     "feature_df.head()"
    ]
